# cstab

./: CMakeLists.txt  README.md  const.h  main.cpp  structs.h
clipper2/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
homog2d/: homog2d.h
test/: bishop.json  model.json  model_short.json
